# AHP-matrix-project

./: .gitignore  CMakeLists.txt  CMakeLists_win.txt  Matrix.cpp  MatrixCollection.cpp  README.md  Saaty  compile.sh  consultations.txt  generateAll4.cpp  lp  lpalap  lpfeladat.cpp  lpformatrix.cpp  matrixperm.cpp  names.txt  plans.txt  szakmai_Saaty.cpp  todos
consult/: ParetoKonkret.m
consult/02/: BozokiFulop-Pareto-2016-11-09b.tex
consult/03/: NemParetoASCII.txt  NemParetoMAT.mat
consult/04/: 5x5feszitofak.txt
consult/05/: 4x4feszitofak.txt
consult/06/: BozokiFulop-Komlosi70-2017-04-20.tex  BozokiFulop-Pareto-2017-04-05.tex  Logarithmic-2017-04-02.tex
consult/07/: paretoCos01.doc  paretoCos01.sce
doc/: consultations.txt
doc/consultations/03/: NemParetoXLS.xls  NemParetoXLSbarkacsolva3.xls
doc/consultations/04/: 5x5feszitofak.html
doc/consultations/08/: WPM$2784.xlsx
doc/consultations/09/: ListakMegfeleltetese.xls  NemPareto4x4EM.xls  NemPareto4x4EMsok.m
doc/consultations/12/: AntalBozoki4x4-03-06a.tex  SubSectionAMAST-UJ.tex  SubSectionCosinus-UJ.tex  SubSectionEigenvector-UJ.tex
extr/glpk-4.61/: Makefile  config.status  libtool
extr/glpk-4.61/examples/: Makefile  glpsol
extr/glpk-4.61/examples/.deps/: glpsol.Po
extr/glpk-4.61/examples/.libs/: glpsol  lt-glpsol
extr/glpk-4.61/src/: Makefile
extr/glpk-4.61/src/.deps/: libglpk_la-adler32.Plo  libglpk_la-advbas.Plo  libglpk_la-alloc.Plo  libglpk_la-amd_1.Plo  libglpk_la-amd_2.Plo  libglpk_la-amd_aat.Plo  libglpk_la-amd_control.Plo  libglpk_la-amd_defaults.Plo  libglpk_la-amd_dump.Plo  libglpk_la-amd_info.Plo  libglpk_la-amd_order.Plo  libglpk_la-amd_post_tree.Plo  libglpk_la-amd_postorder.Plo  libglpk_la-amd_preprocess.Plo  libglpk_la-amd_valid.Plo  libglpk_la-asnhall.Plo  libglpk_la-asnlp.Plo  libglpk_la-asnokalg.Plo  libglpk_la-avl.Plo  libglpk_la-bfd.Plo  libglpk_la-bfx.Plo  libglpk_la-bignum.Plo  libglpk_la-btf.Plo  libglpk_la-btfint.Plo  libglpk_la-cfg.Plo  libglpk_la-cfg1.Plo  libglpk_la-cfg2.Plo  libglpk_la-ckasn.Plo  libglpk_la-ckcnf.Plo  libglpk_la-clqcut.Plo  libglpk_la-colamd.Plo  libglpk_la-cplex.Plo  libglpk_la-cpp.Plo  libglpk_la-cpxbas.Plo  libglpk_la-crc32.Plo  libglpk_la-deflate.Plo  libglpk_la-dimacs.Plo  libglpk_la-dlsup.Plo  libglpk_la-dmp.Plo  libglpk_la-env.Plo  (+138 more)
extr/glpk-4.61/src/.libs/: libglpk.so.40.2.0
include/: mingw.mutex.h
include/Eigen/: sample
include/lemon/: CTestTestfile.cmake
include/lemon/lemon/: CTestTestfile.cmake  glpk.h
res/: .~lock.basicHistogram.csv#  avgSpanTree.csv  avgspanPareto.mt  basicHistogram.csv  basicHistogram.ods  basicHistogram2.csv  basicHistogram2.ods  basicHistogramfixed.ods  basicHistogramp0.0071.csv  basicHistogramp0.01.csv  basicHistogramp0.231.csv  consistent4x4matrices.mt  consistents.mt  consistentsCsv.csv  cosine4x4matrices.csv  cosinePareto.mt  eigen4x4matrices.csv  eigen4x4matrices.mt  eigenvalNonEff.csv  plot.sh  spantree4x4matrices.csv  spantree4x4matrices.mt
res/histogram_legacy/: basicHistogram0.01.csv  basicHistogram0.05.csv  basicHistogram0.07.csv  basicHistogram0.11.csv
res/histograms/: basicHistogram.csv  basicHistogram.ods  basicHistogram2.ods  upperTriangleHistogram.ods
res/plot/: plot.html
results/: consistent5x5.txt  cosine4x4matrices.csv  cosine4x4matrices.mt  minimalPermuated.txt  plot.sh  spantree4x4matrices.csv
results/histogram_legacy/: basicHistogram0.03.csv  basicHistogram0.09.csv  basicHistogram0.1.csv  basicHistogram0.13.csv
results/histograms/: upperTriangleIntegers.ods
sources/: _LPTester.cpp  _MatrixFilter.cpp
sources/Dimension5/: Gen5x5Matrices.cpp  MatrixStr.h
sources/Matrices/: GraphSolution.cpp  GraphSolution.hpp  Matrix.tpp  Matrix5Spec.cppx  MatrixCollection.tpp  Paths.hpp
sources/common/: GraphSolution.cpp  GraphSolution.hpp  LpSolution.hpp  Matrix.hpp  Matrix.tpp  MatrixCollection.hpp  MatrixGenerator.hpp  MatrixGenerator.tpp  Paths.hpp
sources/projects/dimensionFive/: DistributedFile.cpp  DistributedFile.hpp  File.cpp  File.hpp  Gen5x5Matrices.cpp  LRUCache.hpp  LRUCache.tpp  MatrixStr.h  Multithreaded.cpp  Multithreaded2.cpp  Multithreaded3.cpp
sources/projects/higherDimRandom/: Collector.hpp  FileUtil.hpp  Generator.hpp  Processor.hpp  higherDimRandom.cpp
sources/projects/higherDimRandom/counters/: Counter.hpp  ExponentialCounter.hpp
sources/projects/higherDimRandom/routines/: HistogramRoutine.hpp  LoggingRoutine.hpp  MultipleHistogramRoutine.hpp  PartialSaveRoutine.hpp  Routine.hpp  TestRoutine.hpp
sources/projects/higherDimRandom/routines/counters/: Counter.hpp  ExponentialCounter.hpp
sources/projects/higherDimRandomMultithreaded/: TCollector.hpp  TGenerator.hpp  TProcessor.hpp  higherDimRandomMultithreaded.cpp
sources/projects/higherDimRandomMultithreaded/counters/: TCounter.hpp  TExponentialCounter.hpp
sources/projects/higherDimRandomMultithreaded/routines/: THistogramRoutine.hpp  TLoggingRoutine.hpp  TMultipleHistogramRoutine.hpp  TPartialSaveRoutine.hpp  TRoutine.hpp  TTestRoutine.hpp
sources/projects/histogram/: Histogram.cpp  Histogram2.cpp
sources/projects/main/: main.cpp
sources/projects/test/: LPTester.cpp
src/: GraphSolution.cpp  GraphSolution.h  LpSolution.h  Matrix.cpp  Matrix.h  Matrix5Spec.cpp  MatrixCollection.cpp  MatrixCollection.h  MatrixGenerator.cpp  _Histogram.cpp  _Histogram2.cpp  _LPTester.cpp  _MatrixFilter.cpp  generateAll4.cpp  lpalap.cpp  lpfeladat.cpp  matrixperm.cpp  szakmai_Saaty.cpp
src/Eigen/: Dense  sample.cpp
